apps/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notesapp
  namespace: default
  labels:
    app: notesapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notesapp
  template:
    metadata:
      labels:
        app: notesapp
    spec:
      containers:
      - name: notesapp
        image: docker.io/idle19920116/notesapp:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 1024Mi
