apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notesapp-service
spec:
  type: ClusterIP
  selector:
    app: notesapp
  ports:
    - targetPort: 4000
      port: 4000
